--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,11 @@
         android:id="@+id/homeFragment"
         android:name="com.example.foodies.fragments.home.HomeFragment"
         android:label="Home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_searchFragment"
+            app:destination="@id/searchFragment" />
+    </fragment>
     <fragment
         android:id="@+id/favoritesFragment"
         android:name="com.example.foodies.fragments.favorites.FavoritesFragment"
@@ -20,4 +24,9 @@
         android:name="com.example.foodies.fragments.categories.CategoriesFragment"
         android:label="Categories"
         tools:layout="@layout/fragment_categories" />
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.example.foodies.SearchFragment"
+        android:label="fragment_search"
+        tools:layout="@layout/fragment_search" />
 </navigation>
