--- a/app/src/main/res/layout/fragment_meal_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_meal_bottom_sheet.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.bottomsheet.MealBottomSheetFragment"
+    tools:context=".ui.dialog.bottomsheet.MealBottomSheetFragment"
     android:id="@+id/parentBottomSheetLayout">
 
     <ImageView
